gccida/g1/init_branch_prob
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_branch_prob/src/profile.c:1447:1: error: use of undeclared identifier 'profiler_label'
profiler_label = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v8); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_branch_prob/src/profile.c:1447:47: error: use of undeclared identifier 'machine_mode'
profiler_label = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v8); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_branch_prob/src/profile.c:1448:20: error: use of undeclared identifier 'profiler_label'
ggc_add_rtx_root( &profiler_label, 1); 
                   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_branch_prob/src/obj/profile.o] Error 1
